--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
+        <div class="icon-container">
+          <img src="https://img.icons8.com/color/512/linkedin-circled.png">
+          <img src="https://img.icons8.com/doodle/512/linkedin-circled.png">
+        </div>
 
         {% if site.show_downloads %}
         <ul class="downloads">
