--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
         <div class="icon-container">
-          <img src="{{/assets/linkedin.png | relative_url}}" href="www.linkedin.com/in/robert-viramontes">
-          <img src="{{/assets/orcid.png | relative_url}}" href="https://orcid.org/0000-0003-3074-2438">
+          <img src="assets/linkedin.png" href="www.linkedin.com/in/robert-viramontes">
+          <img src="assets/orcid.png" href="https://orcid.org/0000-0003-3074-2438">
         </div>
 
         {% if site.show_downloads %}
