--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,10 @@
 
 @import "{{ site.theme }}";
 .icon-container {
+  display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
+  column-gap: 2em;
   height: 2em;
 }
 
