--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style="text-align:center">{{ site.description | default: site.github.project_tagline }}</p>
 
         <div class="icon-container">
           <a href="https://www.linkedin.com/in/robert-viramontes"> <img src="assets/linkedin.png" alt="linkedin"></a>
@@ -33,7 +33,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p style="text-align:center" class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
